# GalSim_PhotonShoot_CUDA

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
examples/: demo0.py  demo01.py
galsim/: chromatic.py  convolve.py  deltafunction.py  gsobject.py  interpolatedimage.py  photon_array.py  sum.py  transform.py
include/galsim/: Image.h  Interval.h  OneDimensionalDeviate.h  PhotonArray.h  ProbabilityTree.h  Random.h  SBInterpolatedImage.h  SBInterpolatedImageImpl.h  Version.h
pysrc/: CMakeLists.txt  PhotonArray.cpp
report/: comparison_report.md  report.md
results/: cpp_collection_summary.pkl  cpp_photons_10000.pkl  cpp_photons_100000.pkl  cpp_photons_1000000.pkl  cuda_collection_summary.pkl  cuda_photons_10000.pkl  cuda_photons_100000.pkl  cuda_photons_1000000.pkl
scripts/: 1_collect_cpp_data.sh  2_collect_cuda_data.sh  3_compare_versions.sh  collect_version_data.py  consistency_analysis.py  generate_comparison_report.py
src/: CMakeLists.txt  Interpolant.cpp  OneDimensionalDeviate.cpp  PhotonArray.cpp  Random.cpp  SBBox.cpp  SBDeltaFunction.cpp  SBGaussian.cpp  SBInterpolatedImage.cpp  SBMoffat.cpp  SBSersic.cpp  SBTransform.cpp
src/cuda_kernels/: CuPhotonArray.cu  CuPhotonArray.h  CuPixelCDF.cu  CuPixelCDF.h  CuPixelProbabilityTree.cu  CuPixelProbabilityTree.h  CuProbabilityTree.cu  CuProbabilityTree.h  Delta_shoot.cu  Delta_shoot.h  Linear_shoot.cu  Linear_shoot.h  Nearest_shoot.cu  Nearest_shoot.h  SBBoxImpl_shoot.cu  SBBoxImpl_shoot.h  SBDeltaFunctionImpl_shoot.cu  SBDeltaFunctionImpl_shoot.h  SBGaussianImpl_shoot.cu  SBGaussianImpl_shoot.h  SBMoffatImpl_shoot.cu  SBMoffatImpl_shoot.h  SBTopHatImpl_shoot.cu  SBTopHatImpl_shoot.h  cuda_check.h  readme.md
tests/: CMakeLists.txt
